syntax = "proto3";

package com.locfox.qr_book;

import "google/protobuf/empty.proto";

message Account {
  uint64 id = 1;
  string nickname = 2;
  string password_hash = 3;
}

message QrCode {
  string uuid = 1;
  string url = 2;
  uint64 owner_id =3;
}

service QRCodesHandler {
  rpc GetQrCode (QrCodeUUID) returns (QrCode);
  rpc FindAllByUserId (AccountId) returns (QrCodeList);
}

service AccountsService {
  rpc GetAccount (AccountId) returns (Account);
  rpc GetAccountByNickname (AccountNickname) returns (Account);
}

message QrCodeList {
  repeated QrCode codes = 1;
}

message AccountNickname {
  string nickname = 1;
}

message AccountId {
  uint64 id = 1;
}

message QrCodeUUID {
  string uuid = 1;
}
